# ocular

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boilerplate_filter.h  browse.h  demo.c  fastmath.h  ocular.c  ocular.h  timing.h  tiny_jpeg.h
.github/: FUNDING.yml
.github/workflows/: doxygen-gh-pages.yml  main.yml
demo/: CMakeLists.txt  browse.h  config.h  demo.c  palette.c  seam_carve.h  similarity.h  stb_image_write.h  util.h
demo/examples/: backlight-repair.cfg  bilateral.cfg  canny-edge.cfg  color-balance.cfg  exp-blur.cfg  film-grain.cfg  kaleidoscope.cfg  laplacian-edge.cfg  motion-blur.cfg  retinex.cfg  sharpen.cfg  surface-blur.cfg  unsharp-mask.cfg  zoom-blur.cfg
demo_ui/: .gitignore  AnchorEdge.cs  ColorConvert.cs  ColorExtensions.cs  ColorTransferMode.cs  EventArgs.cs  FilterType.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  GammaDialog.Designer.cs  GammaDialog.cs  HueDialog.Designer.cs  HueDialog.cs  Interop.cs  OcularDemo.csproj  OcularDemo.sln  OneParamDialog.Designer.cs  OneParamDialog.cs  Program.cs  RadialBlurDialog.Designer.cs  RadialBlurDialog.cs  ResampleDialog.Designer.cs  ResampleDialog.cs  SkinToneDialog.Designer.cs  SkinToneDialog.cs  SplineInterpolator.cs  TestForm.Designer.cs  TestForm.cs  TestForm.resx  ThreeParamDialog.Designer.cs  ThreeParamDialog.cs  TwoParamDialog.Designer.cs  TwoParamDialog.cs  Utility.cs
demo_ui/Controls/: AnchorChooser.Designer.cs  AnchorChooser.cs  Canvas.Designer.cs  Canvas.cs  ColorSlider.cs  Curve.cs  CurveControlRgb.cs  HuePicker.Designer.cs  HuePicker.cs
demo_ui/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
demo_ui/Templates/: BaseFilterDialog.Designer.cs  BaseFilterDialog.cs
dll/: CMakeLists.txt  color.h  dlib_export.h  generate_csharp_def.sh  ocular.def  ocular.h
docs/: Doxyfile  DoxygenLayout.xml  custom_footer.html  custom_header.html  extra_stylesheet.css  gh-deploy.sh  image_modal.js
docs/doxygen-awesome-css/: README.md  doxygen-awesome-fragment-copy-button.js  doxygen-awesome.css
docs/groups/: func.h  func_artistic_filters.h  func_color_convert.h  func_color_filters.h  func_distort_filters.h  func_inplace.h  func_ip_filers.h  func_ip_general.h  func_ip_ocr.h  func_ip_utility.h  func_palette.h  func_pixelate_filters.h  func_stylize_filters.h
docs/mainpages/: categories.h  examples.h  main.h
docs/mainpages/samples/: auto_threshold.md  auto_white_balance.md  backlight.md  beeps.md  bilateral.md  canny_edge.md  channel_mixer.md  color_balance.md  color_halftone.md  convolution.md  crystallize.md  curves.md  deskew.md  despeckle.md  film_grain.md  film_noir.md  flip.md  frosted_glass.md  glass_tiles.md  guided_filter.md  haze_removal.md  kaleidoscope.md  kuwahara.md  marble.md  mosaic.md  motion_blur.md  palettize_file.md  palettize_image.md  pinch.md  pointillize.md  polar_coordinates.md  posterize.md  relief.md  retinex.md  ripple.md  rotate.md  skin_smooth.md  spherize.md  split_tone.md  surface_blur.md  (+3 more)
lib/: CMakeLists.txt  auxiliary.c  auxiliary.h  blend.h  blur_filters.c  blur_filters.h  build_update.sh  color.c  color.h  core.c  core.h  curves.c  curves.h  denoise_filters.c  denoise_filters.h  distort_filters.c  distort_filters.h  dither.c  dither.h  edge_filters.c  edge_filters.h  fastmath.h  fft.c  fft.h  hazeremoval.c  hazeremoval.h  interpolate.h  morphology_filters.c  morphology_filters.h  neuquant.c  neuquant.h  noise.h  ocr.c  ocr.h  ocular.c  ocular.h  palette.c  palette.h  pixelate_filters.c  pixelate_filters.h  (+13 more)
